--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -192,7 +192,7 @@
   <customwidget>
    <class>Display</class>
    <extends>QWidget</extends>
-   <header>display.h</header>
+   <header>gui/display.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
